--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: ${{ matrix.node }}
 
       - name: Install deps and build (with cache)
-        uses: npm ci
+        uses: bahmutov/npm-install@v1
 
       - name: Lint
         run: npm run lint
